--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!-- List Row -->
+    <string name="name">Name</string>
+    <string name="address">address</string>
+
+    <!-- Activity edit -->
+    <string name="input_address">Input Address...</string>
+    <string name="input_name">Input Name...</string>
+    <string name="input_id">Input Id...</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
 </resources>
